SPRING SECURITY WITH MYSQL DOING...

--- a/spring-jsf-1/src/main/resources/messages_es.properties
+++ b/spring-jsf-1/src/main/resources/messages_es.properties
@@ -2,3 +2,6 @@ hi=hola
 customizedHeader=Este es el Header Estilizado
 customizedBody=Este es el Cuerpo Estilizado
 customizedFooter=Este es el Footer Estilizado
+username=NOMBRE DE USUARIO
+password=CONTRASEÑA
+login=ENTRAR
